syntax = "proto3";

package delivery;

option go_package="github.com/goagile/dz1/api/delivery";

service Delivery {
    rpc ScheduleDelivery (ScheduleDeliveryRequest) 
        returns (ScheduleDeliveryResponse) {}
}

message ScheduleDeliveryRequest {
    int32 order_id = 1;
}

message ScheduleDeliveryResponse {
    int32 order_id = 1;
    int32 delivery_id = 2;
}
