syntax = "proto3";

package delivery;

option go_package="github.com/goagile/oshp/pkg/api/grpc/order";

service Order {
    rpc UpdateOrder (UpdateOrderRequest) 
        returns (UpdateOrderResponse) {}
}

message UpdateOrderRequest {
    int32 order_id = 1;
    string delivery_date = 2;
}

message UpdateOrderResponse {
    int32 order_id = 1;
    string order_status = 2;
}
